# agentless

./: .gitignore  README.md  justfile
.claude/commands/: install-agent-sandbox.md  install-engineer-devbox.md  prime.md
.claude/commands/plan/: bug.md  feature.md
.claude/commands/workflow/: document.md  review.md  solution.md
apps/direct/: pyproject.toml
apps/direct/src/direct/: cli.py
apps/listen/: main.py  worker.py
apps/mcp/: pyproject.toml
apps/mcp/src/agent_mcp/: client.py  server.py
