[project]
name = "agent-mcp"
version = "0.1.0"
description = "MCP server for the steer listen server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx",
    "pyyaml",
]

[project.scripts]
agent-mcp = "agent_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mcp"]
